[gd_scene load_steps=5 format=3 uid="uid://d3sd5a738c3i8"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_pcrp7"]
[ext_resource type="FontFile" uid="uid://cyv5okyo2hgew" path="res://assets/poco.ttf" id="2_pxm4w"]
[ext_resource type="PackedScene" uid="uid://cd0nf5ydgsylp" path="res://menu/cursor.tscn" id="3_moyg4"]
[ext_resource type="Script" path="res://menu/menu_item.gd" id="4_dxtp1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pcrp7")

[node name="Cursor" parent="." instance=ExtResource("3_moyg4")]
layout_mode = 1
offset_left = 272.0
offset_top = 2.0
offset_right = -352.0
offset_bottom = -462.0
scale = Vector2(2, 2)
stretch_mode = 0
menu_object = NodePath("../HBoxContainer/MarginContainer/VBoxContainer")
cursor_offset = Vector2(24, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 152.0
alignment = 1
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Continue" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pxm4w")
theme_override_font_sizes/font_size = 20
text = "Continue
"
script = ExtResource("4_dxtp1")

[node name="Start" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pxm4w")
theme_override_font_sizes/font_size = 20
text = "Start
"
script = ExtResource("4_dxtp1")

[node name="Options" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pxm4w")
theme_override_font_sizes/font_size = 20
text = "Options
"
script = ExtResource("4_dxtp1")

[node name="Exit" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pxm4w")
theme_override_font_sizes/font_size = 20
text = "Exit
"
script = ExtResource("4_dxtp1")

[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_selected"]
[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_selected"]
[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_selected"]
[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_selected"]
